patches-graph-json/tests/snapshots/golden__bus_shape_arg.snap
---
source: patches-graph-json/tests/golden.rs
expression: "& doc"
---
{
  "version": 1,
  "modules": [
    {
      "id": "b/m",
      "qname": {
        "path": [
          "b"
        ],
        "name": "m"
      },
      "type_name": "Sum",
      "shape": [
        {
          "name": "channels",
          "value": {
            "type": "int",
            "value": 4
          }
        }
      ],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "in",
            "index": 1,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "in",
            "index": 2,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "in",
            "index": 3,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      }
    },
    {
      "id": "out",
      "qname": {
        "path": [],
        "name": "out"
      },
      "type_name": "AudioOut",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "stereo",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": []
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ],
  "connections": [
    {
      "from": {
        "module": "b/m",
        "port": "out",
        "index": 0
      },
      "to": {
        "module": "out",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ]
}
