patches-graph-json/tests/snapshots/golden__bus_size_3.snap
---
source: patches-graph-json/tests/golden.rs
expression: "& doc"
---
{
  "version": 1,
  "modules": [
    {
      "id": "b/mixer",
      "qname": {
        "path": [
          "b"
        ],
        "name": "mixer"
      },
      "type_name": "Sum",
      "shape": [
        {
          "name": "channels",
          "value": {
            "type": "int",
            "value": 3
          }
        }
      ],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "in",
            "index": 1,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "in",
            "index": 2,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      }
    },
    {
      "id": "osc",
      "qname": {
        "path": [],
        "name": "osc"
      },
      "type_name": "Osc",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "voct",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "fm",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "pulse_width_cv",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "phase_mod",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "sync",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "sine",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "triangle",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "sawtooth",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "square",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "reset_out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "id": "out",
      "qname": {
        "path": [],
        "name": "out"
      },
      "type_name": "AudioOut",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "stereo",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": []
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ],
  "connections": [
    {
      "from": {
        "module": "b/mixer",
        "port": "out",
        "index": 0
      },
      "to": {
        "module": "out",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "from": {
        "module": "osc",
        "port": "sine",
        "index": 0
      },
      "to": {
        "module": "b/mixer",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "from": {
        "module": "osc",
        "port": "sine",
        "index": 0
      },
      "to": {
        "module": "b/mixer",
        "port": "in",
        "index": 1
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "from": {
        "module": "osc",
        "port": "sine",
        "index": 0
      },
      "to": {
        "module": "b/mixer",
        "port": "in",
        "index": 2
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ]
}
