patches-graph-json/tests/snapshots/golden__levelled_per_index.snap
---
source: patches-graph-json/tests/golden.rs
expression: "& doc"
---
{
  "version": 1,
  "modules": [
    {
      "id": "lv/g",
      "qname": {
        "path": [
          "lv"
        ],
        "name": "g"
      },
      "type_name": "Gain",
      "shape": [],
      "params": [
        {
          "name": "level/0",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 0.8
            }
          }
        },
        {
          "name": "level/1",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 0.3
            }
          }
        },
        {
          "name": "level/2",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 1.0
            }
          }
        }
      ],
      "port_aliases": [],
      "ports": null,
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      }
    },
    {
      "id": "osc",
      "qname": {
        "path": [],
        "name": "osc"
      },
      "type_name": "Osc",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "voct",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "fm",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "pulse_width_cv",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "phase_mod",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "sync",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "sine",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "triangle",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "sawtooth",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "square",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "reset_out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "id": "out",
      "qname": {
        "path": [],
        "name": "out"
      },
      "type_name": "AudioOut",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "stereo",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": []
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ],
  "connections": [
    {
      "from": {
        "module": "lv/g",
        "port": "out",
        "index": 0
      },
      "to": {
        "module": "out",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "from": {
        "module": "osc",
        "port": "sine",
        "index": 0
      },
      "to": {
        "module": "lv/g",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ]
}
